Add project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ set(PROJECT_SOURCES
     connectionManager.cpp
     deviceManager.h
     deviceManager.cpp
+    device.h
+    device.cpp
     qml.qrc
     )
 
