Add device model for view

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ set(PROJECT_SOURCES
     rootController.cpp
     devicesHub.h
     devicesHub.cpp
+    deviceModel.h
+    deviceModel.cpp
     qml.qrc
     )
 
